--- a/views/player/index.ejs
+++ b/views/player/index.ejs
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Join | KahootClone</title>
-        <link rel="stylesheet" href="css/index.css" />
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    </head>
-    <body>
-        <h1 id="title">Join a Game</h1>
-        <form action="/join/">
-            <div class="form-field">
-                <label id="label">Game Pin</label>
-                <input id="pin" type="number" name="pin" autofocus />
-            </div>
-            <br />
-            <div class="form-field">
-                <button id="joinButton">Join</button>
-            </div>
-        </form>
-    </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title><%= title %></title>
-        <link rel="stylesheet" href="/stylesheets/style.css" />
-    </head>
-    <body>
-        <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
-    </body>
+<html lang="en">
+  <%- include('../partials/header', {title}); %>
+  <body>
+    <h1 id="title">Join a Game</h1>
+    <form action="/join/">
+      <div class="form-field">
+        <label id="label">Game Pin</label>
+        <input id="pin" type="number" name="pin" autofocus />
+      </div>
+      <br />
+      <div class="form-field">
+        <button id="enterButton">Enter</button>
+      </div>
+    </form>
+    <%- include('../partials/footer') %>
+  </body>
 </html>
