--- a/views/player/ingame.ejs
+++ b/views/player/ingame.ejs
@@ -2,10 +2,46 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <h1 id="title1">Waiting on host to start game</h1>
+    <h3 id="title2">Do you see your name on the screen?</h3>
+    <div class="loader"></div>
+    <br />
+
+    <script>
+      var socket = io({ transports: ['websocket'], upgrade: false });
+
+      //When player connects to server
+      socket.on('connect', function () {
+        //var params = jQuery.deparam(window.location.search); //Gets data from url
+        const urlParams = new URLSearchParams(window.location.search);
+
+        const params = {
+          name: urlParams.get('name'),
+          pin: urlParams.get('pin'),
+        };
+        console.log(params);
+        //Tell server that it is player connection
+        socket.emit('player-join', params);
+      });
+
+      //Boot player back to join screen if game pin has no match
+      socket.on('noGameFound', function () {
+        window.location.href = '../';
+      });
+      //If the host disconnects, then the player is booted to main screen
+      socket.on('hostDisconnect', function () {
+        window.location.href = '../';
+      });
+
+      //When the host clicks start game, the player screen changes
+      socket.on('gameStartedPlayer', function () {
+        window.location.href = '/player/game/' + '?id=' + socket.id;
+      });
+    </script>
   </body>
 </html>
