--- a/views/player/join.ejs
+++ b/views/player/join.ejs
@@ -2,10 +2,25 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+
+    <form action="/ingame/">
+      <div class="form-field">
+        <label id="label">Display Name</label>
+        <input id="name" type="text" name="name" autofocus />
+      </div>
+      <br />
+
+      <div class="form-field">
+        <button id="joinButton">Join</button>
+      </div>
+    </form>
+
+ 
   </body>
 </html>
