--- a/views/player/join.ejs
+++ b/views/player/join.ejs
@@ -6,21 +6,17 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
 
     <form action="/ingame/">
       <div class="form-field">
-        <label id="label">Display Name</label>
+        <label id="label">Nickname</label>
         <input id="name" type="text" name="name" autofocus />
       </div>
       <br />
 
       <div class="form-field">
-        <button id="joinButton">Join</button>
+        <button id="submit">Join</button>
       </div>
     </form>
-
- 
   </body>
 </html>
