--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,17 @@
 body {
   padding: 50px;
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  -webkit-animation: bgcolor 20s infinite;
+  animation: bgcolor 10s infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
 }
 
 a {
   color: #00b7ff;
 }
 
-<style > @keyframes bgcolor {
+@keyframes bgcolor {
   0% {
     background-color: #45a3e5;
   }
@@ -29,11 +33,20 @@ a {
   }
 }
 
-body {
-  -webkit-animation: bgcolor 20s infinite;
-  animation: bgcolor 10s infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+h1 {
+  display: block;
+  text-align: center;
+  font-size: 25px;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+}
+
+h2 {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  color: white;
 }
 #title {
   font-family: 'Raleway', sans-serif;
@@ -81,7 +94,7 @@ body {
 #host:hover {
   text-decoration: underline;
 }
-#joinButton #enterButton {
+#submit {
   width: 50%;
   background-color: #4caf50;
   color: white;
