--- a/views/player/index.ejs
+++ b/views/player/index.ejs
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
   <%- include('../partials/header', {title}); %>
   <body>
     <h1 id="title">Join a Game</h1>
@@ -10,7 +8,7 @@
       </div>
       <br />
       <div class="form-field">
-        <button id="enterButton">Enter</button>
+        <button id="submit">Enter</button>
       </div>
     </form>
     <%- include('../partials/footer') %>
