--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title><%= title %></title>
-        <link rel="stylesheet" href="/stylesheets/style.css" />
-    </head>
-    <body>
-        <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
-    </body>
+  <%- include('../partials/header', {title}); %>
+  <body>
+    <h1><%= title %></h1>
+    <%- include('../partials/footer') %>
+    <script src="../javascripts/home.js"></script>
+  </body>
 </html>
