--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,11 +48,51 @@ h2 {
   font-family: 'Raleway', sans-serif;
   color: white;
 }
+#question-field {
+  border-style: groove;
+  border-width: 1px;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+}
+.question {
+  width: 400px;
+  font-family: 'Raleway', sans-serif;
+}
+.correct {
+  width: 50px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
+#quizTitle {
+  font-family: 'Raleway', sans-serif;
+}
 #title {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 50px;
   color: white;
+}
+#subtitle {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+}
+#link {
+  color: white;
+}
+#game-list {
+  text-align: center;
+}
+#back {
+  color: white;
+  text-align: center;
+}
+#gameButton {
+  font-size: 80px;
+}
+#gameButton:hover {
+  cursor: pointer;
 }
 #name {
   width: 50%;
