--- a/views/host/index.ejs
+++ b/views/host/index.ejs
@@ -2,7 +2,14 @@
 <html>
   <%- include('../partials/header', {title}); %>
   <body>
-    <h1><%= title %></h1>
+    <a id="back" href="../">Back</a>
+    <h1 id="title"><%= title %></h1>
+    <h1 id="name"><%= userName %></h1>
+    <h4 id="subtitle">
+      Choose a Game Below or
+      <a id="link" href="/home/compose">Compose your Own!</a>
+    </h4>
+    <div id="game-list"></div>
     <h2><%= userName %></h2>
     <%- include('../partials/footer') %>
     <script src="../javascripts/host.js"></script>
