--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+  <%- include('../partials/header', {title}); %>
   <body>
     <h1><%= title %></h1>
+    <button id="cancel">Cancel Game</button>
+    <h2 id="title">Join this Game using the Game Pin:</h2>
+    <h1 id="gamePinText"></h1>
+    <textarea style="width: 700px; height: 500px" readonly id="players"></textarea>
+    <br />
+    <button id="start" onclick="startGame()">Start Game</button>
+    <br />
+    <br />
+    <%- include('../partials/footer') %>
+    <script src="../javascripts/lobby.js"></script>
   </body>
 </html>
