--- a/views/user/logout.ejs
+++ b/views/user/logout.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+  <%- include('../partials/header', {title}); %>
   <body>
     <h1><%= title %></h1>
+    <%- include('../partials/footer') %>
   </body>
 </html>
