--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,4 @@
-body {
-  padding: 50px;
-  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-  -webkit-animation: bgcolor 20s infinite;
-  animation: bgcolor 10s infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-}
-
-a {
-  color: #00b7ff;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,700;1,400&display=swap');
 
 @keyframes bgcolor {
   0% {
@@ -33,11 +22,24 @@ a {
   }
 }
 
+body {
+  padding: 50px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  -webkit-animation: bgcolor 20s infinite;
+  animation: bgcolor 10s infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+/* 
+a {
+  color: #00b7ff;
+}
+
 h1 {
   display: block;
   text-align: center;
   font-size: 25px;
-  font-family: 'Raleway', sans-serif;
   color: white;
 }
 
@@ -45,29 +47,23 @@ h2 {
   display: block;
   text-align: center;
   font-size: 20px;
-  font-family: 'Raleway', sans-serif;
   color: white;
 }
+*/
 #question-field {
   border-style: groove;
   border-width: 1px;
   padding: 10px;
-  font-family: 'Raleway', sans-serif;
 }
 .question {
   width: 400px;
-  font-family: 'Raleway', sans-serif;
 }
 .correct {
   width: 50px;
   text-align: center;
-  font-family: 'Raleway', sans-serif;
 }
-#quizTitle {
-  font-family: 'Raleway', sans-serif;
-}
+
 #title {
-  font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 50px;
   color: white;
@@ -76,7 +72,6 @@ h2 {
   color: white;
   text-align: center;
   font-size: 20px;
-  font-family: 'Raleway', sans-serif;
 }
 #link {
   color: white;
@@ -120,11 +115,11 @@ h2 {
   font-size: 20px;
   text-align: center;
 }
+
 #label {
   display: block;
   text-align: center;
   font-size: 25px;
-  font-family: 'Raleway', sans-serif;
   color: white;
 }
 #host {
@@ -134,19 +129,19 @@ h2 {
 #host:hover {
   text-decoration: underline;
 }
+
 #submit {
   width: 50%;
-  background-color: #4caf50;
-  color: white;
+  /* background-color: #4caf50; */
+  /* color: white; */
   padding: 14px 20px;
   margin: 8px 0;
-  border: none;
-  border-radius: 4px;
+  /* border: none; */
+  /* border-radius: 4px; */
   cursor: pointer;
   display: block;
   margin-right: auto;
   margin-left: auto;
   font-size: 20px;
-  background-color: #3a3b3a;
-  font-family: 'Raleway', sans-serif;
+  /* background-color: #3a3b3a; */
 }
