--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootswatch lumen -->
   <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+    href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/lumen/bootstrap.min.css"
+    integrity="sha256-2zyNvUTezoJ3p/Kd78Ia/B5+UdtRtlQeRJSmFlHEn6Q="
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="../stylesheets/style.css" />
