--- a/views/player/index.ejs
+++ b/views/player/index.ejs
@@ -7,8 +7,8 @@
         <input id="pin" type="number" name="pin" autofocus />
       </div>
       <br />
-      <div class="form-field">
-        <button id="submit">Enter</button>
+      <div class="d-grid gap-2 form-field">
+        <button id="submit" class="btn btn-lg btn-primary" type="button">Enter</button>
       </div>
     </form>
     <%- include('../partials/footer') %>
