--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -2,7 +2,7 @@
   <%- include('../partials/header', {title}); %>
 
   <style>
-    html,
+    /* html,
     body {
       height: 100%;
     }
@@ -15,7 +15,7 @@
       padding-top: 40px;
       padding-bottom: 40px;
       background-color: #f5f5f5;
-    }
+    } */
 
     .form-signin {
       width: 100%;
@@ -73,7 +73,9 @@
       <div class="checkbox mb-3">
         <label> <input type="checkbox" value="remember-me" /> Remember me </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" id="submit">Sign in</button>
+
+      <button id="submit" class="form-control btn btn-primary" type="button">Sign in</button>
+
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
     </form>
     <%- include('../partials/footer') %>
