--- a/views/user/logout.ejs
+++ b/views/user/logout.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <%- include('../partials/header', {title}); %>
+  <%- include('../partials/headerhome', {title}); %>
   <body>
     <h1><%= title %></h1>
     <%- include('../partials/footer') %>
