--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -74,7 +74,7 @@
         <label> <input type="checkbox" value="remember-me" /> Remember me </label>
       </div>
 
-      <button id="submit" class="form-control btn btn-primary" type="button">Sign in</button>
+      <button id="submit" class="form-control btn btn-primary" type="submit">Sign in</button>
 
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
     </form>
