--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,8 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="../stylesheets/style.css" />
+  
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <link rel="icon" href="./images/logo.png" type="img">
   <title>Welcome to MOOD</title>
 </head>
