redesign Answer and PlayerAnswer tables\n\nAlso handed over of password encryption to User model

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,6 @@
     integrity="sha256-2zyNvUTezoJ3p/Kd78Ia/B5+UdtRtlQeRJSmFlHEn6Q="
     crossorigin="anonymous"
   />
-  <link rel="stylesheet" href="../stylesheets/style.css" />
+  <link rel="stylesheet" href="./stylesheets/style.css" />
   <title>Welcome to MOOD</title>
 </head>
