minor update on db model

--- a/views/user/compose.ejs
+++ b/views/user/compose.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
   <%- include('../partials/headerhome', {title}); %>
   <body>
     <nav class="sidebar" id="mySidebar">
