--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="tr">
 <%- include('../partials/headerhome', {title}); %>
 
   <body class="body" id="signinbody">
