--- a/views/user/logout.ejs
+++ b/views/user/logout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
   <%- include('../partials/headerhome', {title}); %>
   <body>
     <h1><%= title %></h1>
