--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,30 +1,83 @@
-<!DOCTYPE html>
-<html lang="tr">
-<%- include('../partials/headerhome', {title}); %>
+<html>
+  <%- include('../partials/headerhome', {title}); %>
 
-  <body class="body" id="loginbody">
-    <div class="row d-flex justify-content-center">
-      <div class="col-lg-6 mx-md-2 mx-lg-auto my-5 ">
-        <div class="login-box" id="login-box">
-          <div class="login-snip" id="login-snip">
-            <div><img id="logogreen" class="img-thumbnail" src="./images/logogreen.png" style="height: 2.0rem;"></span>MOOD-LOGIN</div>
-            <div class="login-space" id="login-space">
-              <div class="login">
-                <div class="group"> <label for="user" class="label">Username</label> <input id="user" type="text"
-                    class="input" placeholder="Enter your username"> </div>
-                <div class="group"> <label for="pass" class="label">Password</label> <input id="pass" type="password"
-                    class="input" data-type="password" placeholder="Enter your password"> </div>
-                <div class="group"> <input id="check" type="checkbox" class="check" checked> <label for="check"><span
-                      class="icon "></span> Remember me </label> </div>
-                <div class="group"> <input id="sign" type="submit" class="but" value="Sign In"> </div>
-                <div class="hr"></div>
-                <div class="foot">Do you have an account? <a href="#" id="registerlink">Register now!</a> </div>
-              </div>
-            </div>
-          </div>
-        </div>
+  <style>
+    /* html,
+    body {
+      height: 100%;
+    }
+
+    body {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #f5f5f5;
+    } */
+
+    .form-signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+    .form-signin .checkbox {
+      font-weight: 400;
+    }
+    .form-signin .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+    .form-signin input[type='email'] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type='password'] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  </style>
+  <body>
+    <form class="form-signin text-center" action="/login" method="POST">
+      <i class="fas fa-sign-in-alt fa-5x"></i>
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input
+        type="email"
+        id="inputEmail"
+        name="email"
+        class="form-control"
+        placeholder="Email address"
+        required
+        autofocus
+      />
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        class="form-control"
+        name="password"
+        placeholder="Password"
+        required
+      />
+      <div class="checkbox mb-3">
+        <label> <input type="checkbox" value="remember-me" /> Remember me </label>
       </div>
-      <%- include('../partials/footer') %>
-  </body>
 
+      <button id="submit" class="form-control btn btn-primary" type="submit">Sign in</button>
+
+      <p class="mt-5 mb-3 text-muted">&copy; 2017-2021</p>
+    </form>
+    <%- include('../partials/footer') %>
+  </body>
 </html>
