--- a/views/host/index.ejs
+++ b/views/host/index.ejs
@@ -1,3 +1,6 @@
+<!-- lobby ggiriş sayfası
+pin gösteriliyor ve  -->
+
 <!DOCTYPE html>
 <html>
   <%- include('../partials/header', {title}); %>
@@ -12,33 +15,6 @@
     <div id="game-list"></div>
     <h2><%= userName %></h2>
     <%- include('../partials/footer') %>
-    <script>
-      console.log('from :>> ', 'host/hostjs');
-      const socket = io();
-
-      socket.on('connect', () => {
-        console.log('connected :>> ', socket.io.engine.id);
-        socket.emit('requestDbNames'); // Get database names to display to user
-      });
-      socket.on('gameNamesData', function (data) {
-        console.log(data);
-        for (var i = 0; i < Object.keys(data).length; i++) {
-          var div = document.getElementById('game-list');
-          var button = document.createElement('button');
-
-          button.innerHTML = data[i].title;
-          button.setAttribute('onClick', "startGame('" + data[i].id + "')");
-          button.setAttribute('id', 'gameButton');
-
-          div.appendChild(button);
-          div.appendChild(document.createElement('br'));
-          div.appendChild(document.createElement('br'));
-        }
-      });
-
-      function startGame(data) {
-        window.location.href = '/host/' + '?quizId=' + data;
-      }
-    </script>
+    <script></script>
   </body>
 </html>
