--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -3,49 +3,54 @@
   <%- include('../partials/headerhome', {title}); %>
   <body>
     <h1><%= title %></h1>
-    <nav>
-      <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a
-          class="nav-item nav-link active"
-          id="nav-home-tab"
-          data-toggle="tab"
-          href="#nav-home"
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link active"
+          id="home-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#home"
+          type="button"
           role="tab"
-          aria-controls="nav-home"
+          aria-controls="home"
           aria-selected="true"
-          >Quizzes</a
         >
-        <a
-          class="nav-item nav-link"
-          id="nav-profile-tab"
-          data-toggle="tab"
-          href="#nav-profile"
+          My Quizzes
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link"
+          id="drafts-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#drafts"
+          type="button"
           role="tab"
-          aria-controls="nav-profile"
+          aria-controls="drafts"
           aria-selected="false"
-          >Shared</a
         >
-        <a
-          class="nav-item nav-link"
-          id="nav-contact-tab"
-          data-toggle="tab"
-          href="#nav-contact"
+          My Draft Quizzes
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link"
+          id="shared-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#shared"
+          type="button"
           role="tab"
-          aria-controls="nav-contact"
+          aria-controls="shared"
           aria-selected="false"
-          >Draft</a
         >
-      </div>
-    </nav>
-    <div class="tab-content" id="nav-tabContent">
-      <div
-        class="tab-pane fade show active"
-        id="nav-home"
-        role="tabpanel"
-        aria-labelledby="nav-home-tab"
-      ></div>
-      <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"></div>
-      <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"></div>
+          Shared with me
+        </button>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab"></div>
+      <div class="tab-pane fade" id="drafts" role="tabpanel" aria-labelledby="drafts-tab"></div>
+      <div class="tab-pane fade" id="shared" role="tabpanel" aria-labelledby="shared-tab"></div>
     </div>
     <%- include('../partials/footer') %>
     <script>
@@ -56,22 +61,24 @@
         return (
           '<div class="card mb-12" >' /* style="max-width: 720px;" */ +
           '<div class="row no-gutters">' +
-          '<div class="col-md-3">' +
+          '<div class="col-md-4">' +
           '<img src=' +
           `${data.imgURL}` +
           ' class="card-img" style="width:300px" alt="...">' +
           '</div>' +
-          '<div class="col-md-9">' +
+          '<div class="col-md-8">' +
           '<div class="card-body">' +
           '<h5 class="card-title">' +
-          `${data.title}` +
+          `${data.text}` +
           '</h5>' +
           '<p class="card-text">' +
           `${data.numberOfQuestions}` +
           '</br>' +
           `${data.composerName}` +
           '</p>' +
-          '<a href="#" data-id=' +
+          '<a href=' +
+          `"/lobby?quizId=${data.id}"` +
+          ' data-id=' +
           `${data.id}` +
           ' class="btn btn-primary">Play</a>' +
           '<p class="card-text"><small class="text-muted">' +
@@ -99,27 +106,28 @@
         socket.emit('draft-quizList-request');
         socket.emit('shared-quizList-request');
 
-        socket.on('quizList-response', quizzes => {
-          if (quizzes != null) {
-            quizzes.forEach(quiz => {
+        socket.on('quizList-response', quizData => {
+          console.log('quizzes :>> ', quizData);
+          if (quizData.rows != null) {
+            quizData.rows.forEach(quiz => {
               console.log('quiz :>> ', quiz);
-              $('#nav-home').append(quizCard(quiz));
+              $('#home').append(quizCard(quiz));
             });
           }
         });
-        socket.on('shared-quizList-response', quizzes => {
-          if (quizzes != null) {
-            quizzes.forEach(quiz => {
+        socket.on('shared-quizList-response', quizData => {
+          if (quizData != null) {
+            quizData.rows.forEach(quiz => {
               //console.log("quiz :>> ", quiz);
-              $('#nav-profile').append(quizCard(quiz));
+              $('#drafts').append(quizCard(quiz));
             });
           }
         });
-        socket.on('draft-quizList-response', quizzes => {
-          if (quizzes != null) {
-            quizzes.forEach(quiz => {
+        socket.on('draft-quizList-response', quizData => {
+          if (quizData != null) {
+            quizData.rows.forEach(quiz => {
               console.log('quiz :>> ', quiz);
-              $('#nav-contact').append(quizCard(quiz));
+              $('#shared').append(quizCard(quiz));
             });
           }
         });
