add app.js socket messages

--- a/views/partials/questioncard.ejs
+++ b/views/partials/questioncard.ejs
@@ -19,7 +19,7 @@
 
     </div>
     <div class="col-6 col-lg-6 offset-1 offset-lg-1 drop-zone border-success border-1">
-// TODO: burada file konusu çözülecek
+      <%# // TODO: burada file konusu çözülecek %> 
       <input type="file" name="myFile" class="drop-zone-input" data-tag="imgURL">
 
       <span style="margin-top: 5px;" class="drop-zone-prompt">Drag and drop image from your computer or
