--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -156,7 +156,7 @@
                 type="text"
                 placeholder="Enter quiz title"
                 maxlength="80"
-                value="<%= dataset.details.text %>"
+                value="<%= dataset.details.title %>"
               />
               <label class="modallabel py-2" id="title">Descripton</label>
               <textarea
