--- a/views/partials/quizcard.ejs
+++ b/views/partials/quizcard.ejs
@@ -45,8 +45,14 @@
         ></div>
         <div class="d-flex align-items-center justify-content-between px-0" role="group" aria-label="">
           <small class="text-muted"> <%= moment(data.updatedAt).fromNow() %></small>
-          <a name="" id="" class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>" role="button">EDIT</a>
-          <a name="" id="" class="btn btn-sm btn-success ms-2 px-3" href="/lobby?<%= data.id %> " role="button">PLAY</a>
+          <% if (!data.editEnabled) { %>
+            <a name="" id=""  class="btn btn-sm btn-info ms-2 px-3" href="/clone/<%= data.id %>"  role="button">CLONE</a>
+          <% } else { %> <a name="" id=""  class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>"  role="button">EDIT</a> <% }  %>  
+          <% if (data.isDraft) { %>
+          <a name="" id="" class="btn btn-sm btn-success ms-2 px-3 disabled" href="/lobby?<%= data.id %> " role="button">PLAY</a>
+          <% } else { %>
+            <a name="" id="" class="btn btn-sm btn-success ms-2 px-3" href="/lobby?<%= data.id %> " role="button">PLAY</a>
+          <% }  %>  
         </div>
       </div>
     </div>
