--- a/views/player/join.ejs
+++ b/views/player/join.ejs
@@ -15,8 +15,9 @@
       <br />
 
       <div class="d-grid gap-2 form-field">
-        <button id="submit" class="btn btn-lg btn-primary" type="button">Join</button>
+        <button id="submit" class="btn btn-lg btn-primary" type="submit">Join</button>
       </div>
     </form>
   </body>
+  
 </html>
